--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "private": true,
-  "version": "0.0.0",
-  "name": "gdc-task",
-  "devDependencies": {
-    "jest": "^27.3.1"
+  "version": "2.0",
+  "name": "task-cli",
+  "description": "A command-line (CLI) program that lets you manage your tasks.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ayush-rathore/task-cli.git"
   },
-  "scripts": {
-    "test": "jest"
-  },
+  "author": "Ayush Rathore",
+  "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0"
   }
