--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Ayush Rathore",
   "license": "ISC",
   "dependencies": {
-    "cli-color": "^2.0.1"
+    "node-emoji": "^1.11.0",
+    "node-strings": "^1.0.2"
   }
 }
